# Object-Oriented_Programming_laboratory_work_8

./: LICENSE  README.md  pyproject.toml
src/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
tests/: test_task_1.py  test_task_2.py  test_task_3.py
